worked a bit on no external

--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -25,9 +25,9 @@ The description of Gothic is mostly based on \citep{harbert1978}. The spelling o
 
 I start with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
 
-Consider the example in \ref{ex:gothic-acc-nom-rep}, repeated from the introduction. In this example, the internal case is accusative and the external case is nominative.
-The internal case is accusative. The predicate \tit{frijon} `to love' takes accusative objects.
-The external case is nominative. The predicate \tit{wisan} `to be' takes nominative subjects.
+Consider the example in \ref{ex:gothic-acc-nom-rep}, repeated from the introduction. In this example, the internal accusative case competes against the external nominative case.
+The internal case is accusative, as the predicate \tit{frijon} `to love' takes accusative objects.
+The external case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
 The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{m}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
 
@@ -35,9 +35,9 @@ Examples in which the internal case is accusative, the external case is nominati
  \ac{rel}.\ac{acc}.\ac{sg}.\ac{m} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom-rep}
 
-Consider the example in \ref{ex:gothic-nom-acc-rep}, repeated from the introduction. In this example, the the internal case is nominative and the external case is accusative.
-The internal case is nominative. The predicate \tit{wisan} `to be' takes nominative subjects.
-The external case is accusative. The predicate \tit{ussiggwan} `to read' takes accusative objects.
+Consider the example in \ref{ex:gothic-nom-acc-rep}, repeated from the introduction. In this example, the the internal nominative case competes against the external accusative case.
+The internal case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
+The external case is accusative, as the predicate \tit{ussiggwan} `to read' takes accusative objects.
 The relative pronoun \tit{þo} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{n}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
 
@@ -47,9 +47,9 @@ Examples in which the internal case is nominative, the external case is accusati
 
 I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
 
-Consider the example in \ref{ex:gothic-dat-nom}, in which the internal case is dative and the external case is nominative.
-The internal case is dative. The predicate \tit{fraletan} `to forgive' takes dative objects.
-The external case is nominative. The predicate \tit{frijon} `to love' takes nominative subjects.
+Consider the example in \ref{ex:gothic-dat-nom}, in which the internal dative case competes against the external nominative case.
+The internal case is dative, as the predicate \tit{fraletan} `to forgive' takes dative objects.
+The external case is nominative, as the predicate \tit{frijon} `to love' takes nominative subjects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
 
@@ -57,9 +57,9 @@ Examples in which the internal case is dative, the external case is nominative a
  but \ac{rel}.\ac{dat}.\ac{sg}.\ac{m} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love.?.\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-dat-nom}
 
-Consider the example in \ref{ex:gothic-nom-dat}, in which the internal case is nominative and the external case is dative.
-The internal case is nominative. The predicate \tit{wisan} `to be' takes nominative subjects.
-The external case is dative. The predicate \tit{fraþjan} `to think about' takes dative indirect objects.
+Consider the example in \ref{ex:gothic-nom-dat}, in which the internal nominative case competes against the external dative case.
+The internal case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
+The external case is dative, as the predicate \tit{fraþjan} `to think about' takes dative indirect objects.
 The relative pronoun \tit{þaim} `\ac{rel}.\ac{dat}.\ac{pl}.\ac{n}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
 
@@ -69,8 +69,8 @@ Examples in which the internal case is nominative, the external case is dative a
 
 I end with the competition between dative and accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in accusative.
 
-Consider the example in \ref{ex:gothic-acc-dat}, in which the internal case is dative and the external case is accusative.
-The internal case is dative. The preposition \tit{ana} `on' takes dative complements.\footnote{
+Consider the example in \ref{ex:gothic-acc-dat}, in which the internal dative case competes against the external accusative case.
+The internal case is dative, as the preposition \tit{ana} `on' takes dative complements.\footnote{
 The example in \ref{ex:gothic-acc-dat} differs from the other examples of headless relatives. In this example, it is a preposition that assigns a particular case to the relative pronoun. So far, I have only given examples in which it is a verbal predicate that assigns a case to the relative pronoun (or the absent head). The reason for that is to keep the data set as homogenous as possible. \citet{harbert1978} reports there is no such example with the dative as internal case and the accusative as external case. My own research reaches the same conclusion. The absence of a headless relative with an internal dative case and an external accusative case (both assigned by verbal predicates) is not surprising, mainly for two reasons. First, the headless relative construction is infrequent to begin with. \citeauthor{harbert1978} reports of some case competition combinations only a single or a few occurrences.
 Second, Gothic only has a few verbs that take dative complements.
 
@@ -78,7 +78,7 @@ There is reason to believe that this missing occurrence is due to the above ment
 }\footnote{
 \tit{Ana} `on' takes dative complements when the PP is interpreted as locational. \tit{Ana} `on' takes accusative complements when the PP is interpreted as directional. \tit{Ana þammei} `on that' in \ref{ex:gothic-acc-dat} refers to a location.
 }
-The external case is accusative. The predicate \tit{ushafjan} `to pick up' takes accusative objects.
+The external case is accusative, as the predicate \tit{ushafjan} `to pick up' takes accusative objects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{n}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case are unattested.
 
@@ -86,9 +86,9 @@ Examples in which the internal case is dative, the external case is accusative a
 {pick up}.\ac{pres}.\ac{ptcp}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{n} -\ac{comp} lie.\ac{pret}.3\ac{sg}\\
 `picking up that what he lay on' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat}
 
-Consider the example in \ref{ex:gothic-dat-acc}, in which the internal case is accusative and the external case is dative.
-The internal case is accusative. The predicate \tit{insandjan} `to send' takes accusative objects.
-The external case is dative. The predicate \tit{galaubjan} `to believe' takes dative objects.
+Consider the example in \ref{ex:gothic-dat-acc}, in which the internal accusative case competes against the external dative case.
+The internal case is accusative, as the predicate \tit{insandjan} `to send' takes accusative objects.
+The external case is dative, as the predicate \tit{galaubjan} `to believe' takes dative objects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
 
