--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -57,9 +57,9 @@ The examples follow the spelling and the detailed glosses in ANNIS. The translat
 
 I start with the competition between accusative and nominative. Following the case scale, the relative pronoun appears in accusative case and never in nominative.
 
-Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
-The internal case is nominative. The predicate \tit{gisizzen} `to possess' takes nominative subjects.
-The external case is accusative. The predicate \tit{bibringan} `to give rise to' takes accusative objects.
+Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal nominative case competes against the external accusative case.
+The internal case is nominative, as the predicate \tit{gisizzen} `to possess' takes nominative subjects.
+The external case is accusative, as the predicate \tit{bibringan} `to give rise to' takes accusative objects.
 The relative pronoun \tit{dhen} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 
 % Context: the voice of God speaks through him (I think Jesaja):
@@ -69,9 +69,9 @@ The relative pronoun \tit{dhen} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in th
 `I give rise to from Samuel of Jakob and from Judas him who possesses my mountains.' \flushfill{\ac{ohg}, \ac{isid} 34:3}\label{ex:ohg-acc-nom}\\
 % Lat `Educam de Iacob semine et de Iuda possedentem montes meos.'
 
-Consider the example in \ref{ex:ohg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
-The internal case is accusative. The predicates \tit{zellen} `to tell' and \tit{slahan} `to kill' takes accusative objects.
-The external case is nominative. The predicate \tit{sin} `to be' takes nominative objects.
+Consider the example in \ref{ex:ohg-nom-acc}. In this example, the internal accusative case competes against the external nominative case.
+The internal case is accusative, as the predicates \tit{zellen} `to tell' and \tit{slahan} `to kill' takes accusative objects.
+The external case is nominative, as the predicate \tit{sin} `to be' takes nominative objects.
 The relative pronoun \tit{then} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
 
@@ -82,9 +82,9 @@ and \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} kill\scs
 
 I continue with the competition between dative and nominative. Following the case scale, the relative pronoun appears in dative case and never in nominative.
 
-Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
-The internal case is nominative. The predicate \tit{sprehhan} `to speak' takes nominative subjects.
-The external case is dative. The predicate \tit{antwurten} `to reply' takes dative objects.
+Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal nominative case competes against the external dative case.
+The internal case is nominative, as the predicate \tit{sprehhan} `to speak' takes nominative subjects.
+The external case is dative, as the predicate \tit{antwurten} `to reply' takes dative objects.
 The relative pronoun \tit{demo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
 
@@ -92,9 +92,9 @@ Examples in which the internal case is nominative, the external case is dative a
 and 3\tsc{sg.m.nom} reply.\tsc{3sg}.\tsc{past}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to 3\tsc{sg.m.dat}} speak.\tsc{3sg}.\tsc{past}\scsub{[nom]} say.\tsc{past}.\tsc{3sg}\\
 `And he replied to the one who spoke to him, he said:' \flushfill{\ac{ohg}, \ac{mons} 7:24, adapted from \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
 
-Consider the example in \ref{ex:ohg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
-The internal case is dative. The predicate \tit{forlazan} `to read' takes dative indirect objects.
-The external case is nominative. The predicate \tit{minnon} `to love' takes nominative subjects.
+Consider the example in \ref{ex:ohg-nom-dat}. In this example, the internal dative case competes against the external nominative case.
+The internal case is dative, as the predicate \tit{forlazan} `to read' takes dative indirect objects.
+The external case is nominative, as the predicate \tit{minnon} `to love' takes nominative subjects.
 The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
 
@@ -104,9 +104,9 @@ Examples in which the internal case is dative, the external case is nominative a
 
 I end with the competition between dative and accusative. Following the case scale, the relative pronoun appears in dative case and never in accusative.
 
-Consider the example in \ref{ex:ohg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
-The internal case is nominative. The predicate \tit{zellen} `to report' takes accusative objects.
-The external case is dative. The comparative of the adjective \tit{furiro} `great' takes dative objects.
+Consider the example in \ref{ex:ohg-dat-acc}. In this example, the internal accusative case competes against the external dative case.
+The internal case is nominative, as the predicate \tit{zellen} `to report' takes accusative objects.
+The external case is dative, as the comparative of the adjective \tit{furiro} `great' takes dative objects.
 The relative pronoun \tit{thên} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
 
@@ -115,9 +115,9 @@ Examples in which the internal case is accusative, the external case is dative a
 and \tsc{3pl}.\tsc{acc} all.\tsc{3pl}.\tsc{acc} death.\tsc{nom}.\tsc{sg} attack.\tsc{past}.\tsc{3sg}\\
 `Are you now really greater than Abraham? And than those who one reported here now and death attacked them all?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc}
 
-Consider the example in \ref{ex:ohg-acc-dat}. In this example, the internal case is dative and the external case is accusative.
-The internal case is dative. The predicate \tit{gituon} `to do' takes dative indirect objects.
-The external case is nominative. The predicate \tit{queman} `to come' takes nominative subjects.
+Consider the example in \ref{ex:ohg-acc-dat}. In this example, the internal dative case competes against the external accusative case.
+The internal case is dative, as the predicate \tit{gituon} `to do' takes dative indirect objects.
+The external case is nominative, as the predicate \tit{queman} `to come' takes nominative subjects.
 The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case are unattested.
 
@@ -163,12 +163,10 @@ The three cells in the upper right corner are the situations in which the extern
     \label{tbl:summary-old-high-german}
 \end{table}
 
-\clearpage
-
 In my research I encountered a single counterexample to the pattern I just described.
-Consider the example in \ref{ex:ohg-counterexample}. In this example, the internal case is nominative and the external case is accusative.
-The internal case is nominative. The predicate \tit{giheilen} `to save' takes nominative subjects.
-The external case is accusative. The predicate \tit{beran} `to bear' takes accusative objects.
+Consider the example in \ref{ex:ohg-counterexample}. In this example, the internal nominative case competes against the external accusative case.
+The internal case is nominative, as the predicate \tit{giheilen} `to save' takes nominative subjects.
+The external case is accusative, as the predicate \tit{beran} `to bear' takes accusative objects.
 Surprisingly, the relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in the internal case: the nominative, which is the less complex of the two cases. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. tház si uns béran scolti \tbf{thér} \tbf{unsih} \tbf{gihéilti}\\
@@ -192,9 +190,9 @@ Modern German behave just like Gothic and Old High German in that it adheres to 
 
 I start with the competition between accusative and nominative. Following the case scale, the relative pronoun appears in accusative case and never in nominative. Following the internal-only requirement, only if the accusative case is the internal case, the sentence is grammatical.
 
-Consider the example in \ref{ex:mg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
-The internal case is nominative. The predicate \tit{sein} `to be' takes nominative subjects.
-The external case is accusative. The predicate \tit{einladen} `to invite' takes accusative objects.
+Consider the example in \ref{ex:mg-acc-nom}. In this example, the internal nominative case competes against the external accusative case.
+The internal case is nominative, as the predicate \tit{sein} `to be' takes nominative subjects.
+The external case is accusative, as the predicate \tit{einladen} `to invite' takes accusative objects.
 The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 The example adheres to the case cale, but the more complex case (here the accusative) is not the internal case. As only the internal can win the case competition in Modern German, the example in ungrammatical.
 
@@ -208,9 +206,9 @@ Changing the case of the relative pronoun to the nominative still gives an ungra
 I.\ac{nom} invite.1\ac{sg}\scsub{[acc]} \tsc{rel}.\ac{nom}.\tsc{an} I.\ac{dat} nice be.3\ac{sg}\scsub{[nom]}\\
 `I invite who I like.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom-u}
 
-Consider the example in \ref{ex:mg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
-The internal case is accusative. The predicate \tit{mögen} `to like' takes accusative objects.
-The external case is nominative. The predicate \tit{besuchen} `to visit' takes nominative subjects.
+Consider the example in \ref{ex:mg-nom-acc}. In this example, the internal accusative case competes against the external nominative case.
+The internal case is accusative, as the predicate \tit{mögen} `to like' takes accusative objects.
+The external case is nominative, as the predicate \tit{besuchen} `to visit' takes nominative subjects.
 The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
@@ -225,9 +223,9 @@ Changing the case of the relative pronoun to the nominative gives an ungrammatic
 
 I continue with the competition between dative and nominative. Following the case scale, the relative pronoun appears in dative case and never in nominative. Following the internal-only requirement, only if the dative case is the internal case, the sentence is grammatical.
 
-Consider the example in \ref{ex:mg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
-The internal case is nominative. The predicate \tit{mögen} `to like' takes nominative subjects.
-The external case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
+Consider the example in \ref{ex:mg-dat-nom}. In this example, the internal nominative case competes against the external dative case.
+The internal case is nominative, as the predicate \tit{mögen} `to like' takes nominative subjects.
+The external case is dative, as the predicate \tit{vertrauen} `to trust' takes dative objects.
 The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 The example adheres to the case cale, but the more complex case (here the dative) is not the internal case. As only the internal can win the case competition in Modern German, the example in ungrammatical.
 
@@ -241,9 +239,9 @@ Changing the case of the relative pronoun to the nominative still gives an ungra
 I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{nom}.\tsc{an} Hitchcock.\ac{acc} like.3\ac{sg}\scsub{[nom]}\\
 `I trust who likes Hitchcock.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom-u}
 
-Consider the example in \ref{ex:mg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
-The internal case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
-The external case is nominative. The predicate \tit{besuchen} `to visit' takes nominative subjects.
+Consider the example in \ref{ex:mg-nom-dat}. In this example, the internal dative case competes against the external nominative case.
+The internal case is dative, as the predicate \tit{vertrauen} `to trust' takes dative objects.
+The external case is nominative, as the predicate \tit{besuchen} `to visit' takes nominative subjects.
 The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. Uns besucht \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
@@ -258,9 +256,9 @@ we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria.\ac{no
 
 I end with the competition between dative and accusative. Following the case scale, the relative pronoun appears in dative case and never in accusative. Following the internal-only requirement, only if the dative case is the internal case, the sentence is grammatical.
 
-Consider the example in \ref{ex:mg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
-The internal case is accusative. The predicate \tit{mögen} `to like' takes accusative objects.
-The external case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
+Consider the example in \ref{ex:mg-dat-acc}. In this example, the internal accusative case competes against the external dative case.
+The internal case is accusative, as the predicate \tit{mögen} `to like' takes accusative objects.
+The external case is dative, as the predicate \tit{vertrauen} `to trust' takes dative objects.
 The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 The example adheres to the case scale, but the more complex case (here the dative) is not the internal case. As only the internal can win the case competition in Modern German, the example in ungrammatical.
 
@@ -274,9 +272,9 @@ Changing the case of the relative pronoun to the accusative still gives an ungra
 I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
 `I trust whoever Maria also likes.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-u}
 
-Consider the example in \ref{ex:mg-acc-dat}. In this example, the internal case is dative and the external case is accusative.
-The internal case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
-The external case is accusative. The predicate \tit{einladen} `to invite' takes accusative objects.
+Consider the example in \ref{ex:mg-acc-dat}. In this example, the internal dative case competes against the external accusative case.
+The internal case is dative, as the predicate \tit{vertrauen} `to trust' takes dative objects.
+The external case is accusative, as the predicate \tit{einladen} `to invite' takes accusative objects.
 The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
@@ -327,20 +325,33 @@ In sum, Modern German has two requirements for case competition in its headless 
 
 \section{No only external case wins}
 
-Logically, a third option exist: a language that only allows the external case to surface when it wins the case competition. To the best of my knowledge, this pattern is not attested in any (former) natural language. In this section I discuss languages that have claimed to have this pattern in the literature. I give examples that show that this is not the case. I also discuss languages in which the relative pronoun appear in the external case. However, they are also not languages of the `third type', as they do not show any case competition.
+Logically, a third type of language exist. That would be a language that only allows the external case to surface when it wins the case competition. To the best of my knowledge, this pattern is not attested in any (extinct) natural language. In this section I discuss Ancient Greek, for which is has been claimed in the literature that it shows the pattern. I give examples that show that Ancient Greek actually shows the Gothic and Old High German pattern. I also discuss languages in which the relative pronouns appear in the external case. However, they are also not languages of the `third type', as they do not show any case competition.
 
-It has been claimed that Old Greek (cf. in \citealt{cinque2005}, who stated the same about Gothic) (see a lot of examples here \citealt{kakarikos2014}), but here is an example of why that's not the case:. Although they seem to be more rare, there are also example in which the internal case surfaces.
+It has been claimed that Ancient Greek only allows the external case to surface when it wins the case competition  \citep[cf.][]{cinqueforthcoming}. It does indeed seem to be the case that examples in which the external case wins over the internal case are more frequent (see \citealt{kakarikos2014} for a number of them with different combinations of cases coming together) than examples in which the internal case wins over the external case.\footnote{
+In this dissertation I do not address the question of why certain constructions and configurations are more frequent than others. My goal is to set up a system that generates the grammatical patterns and excludes the ungrammatical or unattested patterns.
+}
+However, such examples exist. I give an example in which the internal accusative wins over the external nominative.
 
-Consider..
-\tit{philéō} `to love' takes accusative, \tit{apothnḗiskō} `to die'
+Consider the example in \ref{ex:ancient-greek}. In this example, the internal accusative case competes against the external nominative case.
+The internal case is nominative, as the predicate \tit{philéō} `to love' takes accusative objects.
+The external case is accusative, as the predicate \tit{apothnḗiskō} `to die' takes nominative subjects.
+The relative pronoun \tit{hòn} `\tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
-\exg. hòn hoi theoì philoũsin apothnḗͅskei néos\\
+\exg. \tbf{hòn} \tbf{hoi} \tbf{theoì} \tbf{philoũsin} apothnḗͅskei néos\\
 \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} the god.\tsc{pl} love.3\tsc{pl} die.3\tsc{sg} young\\
-`He whom the gods love dies young.' (Menander, The Double  Deceiver, fragment 125)
+`He whom the gods love dies young.' (Menander, The Double Deceiver, fragment 125)\label{ex:ancient-greek}
 
-Two other languages come close, but these languages adhere to the case scale.
+There are examples of languages in which the external surfaces. At first sight, it may look like case competition and external wins. Show examples.
 
-Dasalaki: `no case competition'
+\exg. Eδósa leftá ópjon γnórisa.\\
+gave.1\tsc{sg}\scsub{gen} money who.\tsc{gen.pl} met.1\tsc{sg}\scsub{acc}\\
+`I gave money to whoever I met.' \hfill m:\tsc{gen}, e:\tsc{acc}, PL
+
+\exg. ðæt man for-give ðam ðe wið hine gegylte\\
+ that one forgive \tsc{rel}.\ac{acc} \tsc{comp} against him sins\\
+ `that one forgive him who sins against him'\citep{harbert1983}
+
+However, these languages do not adhere to the case scale. The relative pronoun simply always appears in the external case, irrespective of whether the external case is more complex than the internal case.
 
 `meet' takes accusative case, `give' takes genitive case. Going with the case competition would be: let the relative pronoun appear in genitive case. This is ungrammatical. Instead, the relative pronoun appear in the external case, and the internal case gets a clitic.
 
@@ -351,10 +362,6 @@ met.1\tsc{sg}\scsub{acc} \tsc{rel}.\tsc{gen}.\tsc{sg}.\tsc{m} gave.3\tsc{pl}\scs
 \bg. Γnórisa ópjon \tbf{tu} \tbf{éδosan} \tbf{tin} \tbf{ipotrofia}.\\
 met.1\tsc{sg}\scsub{acc} who.\tsc{acc.sg} \tsc{cl.3sg.gen} gave.3\tsc{pl}\scsub{gen} the scholarship.\tsc{acc}\\
 `I met whoever they gave the scholarship to.'
-
-bladiebla \citep{harbert1983}
-
-old english: matrix clause decides, going against case competition
 
 \tit{tōbrȳsan} `to pulversize' takes accusative objects, \tit{onuppan} `upon' takes dative objects. But we see that the relative pronoun appears in accusative case
 
